# lamellar-benchmarks

./: .gitignore  Cargo.toml  README.md  append_metadata.py
HPCG/: Cargo.toml  README.md
HPCG/src/: dot_product.rs  dot_product_am.rs  dot_product_darc.rs  utils.rs  vector.rs  waxby.rs  waxby_am.rs
benchmark_record/: Cargo.toml  README.md
benchmark_record/src/: lib.rs
histo/: .Cargo.toml.swp  .gitignore  Cargo.toml  README.md  aboutme.txt  benchmark_config.json  build.rs
histo/registered_am-stable/: Cargo.toml
histo/registered_am-stable/src/: histo_buffered_updates_dma.rs  histo_buffered_updates_static.rs  histo_dma.rs  histo_static.rs
histo/remote_closures-nightly/: Cargo.toml
histo/remote_closures-nightly/src/: histo_buffered_updates_dma.rs  histo_buffered_updates_static.rs  histo_dma.rs  histo_static.rs
histo/src/: histo.rs  histo_array_small.rs  histo_buffered_safe_am.rs  histo_buffered_safe_am_u32.rs  histo_buffered_unsafe_am.rs  histo_buffered_updates.rs  histo_buffered_updates_static.rs  histo_darc.rs  histo_darc_am_group.rs  histo_lamellar_array_comparison.rs  histo_lamellar_atomicarray.rs  histo_safe_am.rs  histo_safe_am_tgf.rs  histo_safe_typed_am_group.rs  histo_static.rs  histo_unsafe_am.rs  main.rs  options.rs  printer.rs
histo/src/active_message/: am.rs  am_group.rs  buffered_am.rs  mod.rs
histo/src/array/: mod.rs
index_gather/: .gitignore  Cargo.toml  README.md  benchmark_config.json  buffered_benchmark_config.json
index_gather/src/: index_gather_am.rs  index_gather_am_group.rs  index_gather_am_group_u32.rs  index_gather_atomic_array.rs  index_gather_buffered_am.rs  index_gather_buffered_am_u32.rs  index_gather_read_only_array.rs  main.rs  options.rs  printer.rs
index_gather/src/active_message/: am.rs  am_group.rs  buffered_am.rs  mod.rs
index_gather/src/array/: mod.rs
primitives/: Cargo.toml  README.md
primitives/benches/: criterion_lamellar_benchmark.rs  iai_lamellar_benchmark.rs
primitives/src/: lib.rs
python/: generate_geometric_graphs.py
python/custom_graph_0/: coefficients.pkl  col_indices.pkl  num_rows.pkl  row_indices.pkl  shortest_path_lengths.pkl
python/geometric_graph_2d_10000v/: num_columns.pkl  shortest_path_lengths.pkl
python/geometric_graph_2d_1000v/: coefficients.pkl  col_indices.pkl  num_columns.pkl  row_indices.pkl  shortest_path_lengths.pkl
python/geometric_graph_2d_100v/: coefficients.pkl  col_indices.pkl  num_columns.pkl  row_indices.pkl  shortest_path_lengths.pkl
python/geometric_graph_2d_10v/: coefficients.pkl  col_indices.pkl  num_columns.pkl  row_indices.pkl  shortest_path_lengths.pkl
python/geometric_graph_2d_20v/: coefficients.pkl  col_indices.pkl  num_rows.pkl  row_indices.pkl  shortest_path_lengths.pkl
python/geometric_graph_2d_500v/: coefficients.pkl  col_indices.pkl  num_rows.pkl  row_indices.pkl  shortest_path_lengths.pkl
randperm/: Cargo.toml  README.md  benchmark_config.json
randperm/src/: main.rs  options.rs  printer.rs  randperm.rs  randperm_am_array_darts_buffered.rs  randperm_am_darc_darts.rs  randperm_am_darc_darts_buffered.rs  randperm_am_darc_darts_group.rs  randperm_am_darc_push_buffered.rs  randperm_am_darc_push_group.rs  randperm_array_darts.rs
randperm/src/active_message/: buffered_cas_am.rs  buffered_cas_am_remote.rs  buffered_push_am.rs  cas_am_group.rs  cas_am_group_remote.rs  mod.rs  push_am_group.rs  single_cas_am.rs  single_cas_am_remote.rs  single_push_am.rs
randperm/src/array/: mod.rs
sparse_matrix/: Cargo.toml  README.md  RUN_COMMANDS.md  benchmark_tables.md  output.txt
sparse_matrix/bale_lamellared/src/: bale_original_spmat_serial.rs  lamellar_spmat_distributed.rs
sparse_matrix/data_structures/: Cargo.toml
sparse_matrix/data_structures/src/: distributed.rs  lamellar_spmat_serial.rs  lib.rs  serial.rs  test.rs
sparse_matrix/data_structures/src/bale/: LICENSE  README.md  err.rs  sparsemat.rs
sparse_matrix/src/: bench_matrix_perm.rs
sparse_matrix/src/results/: matrix_perm_writestats.txt
sparse_matrix_am/: Cargo.toml  RUN_COMMANDS.md  output.json  sssp_unit_test_data_bellman_ford.json  sssp_unit_test_data_bellman_ford_.json  sssp_unit_test_data_bellman_ford_irredundant_search.json  sssp_unit_test_data_delta_step.json  sssp_unit_test_data_delta_step_semidistributed.json  sssp_unit_test_data_dijkstra.json  sssp_unit_test_data_dijkstra_prebaked.json  sssp_unit_test_dijkstra_graphpet.json  sssp_unit_test_matrix_bellman_ford.json  sssp_unit_test_matrix_delta_step.json  sssp_unit_test_weight_delta_step.json  sssp_unit_test_weight_dijkstra.json
sparse_matrix_am/src/: formatting.rs  lib.rs  matrix_constructors.rs  permutation.rs  sssp_dijkstra.rs  sssp_serial.rs  toposort_am.rs
sparse_matrix_am/src/permutation/: mod.rs  randperm_am_darc_darts.rs
sparse_matrix_distarr/: Cargo.toml  README.md  RUN_COMMANDS.md
sparse_matrix_distarr/data_structures/: Cargo.toml
sparse_matrix_distarr/data_structures/src/: binary_search.rs  distributed.rs  lib.rs  load.rs  serial.rs  test.rs
sparse_matrix_distarr/data_structures/src/bale/: mod.rs  sparsemat.rs
sparse_matrix_distarr/src/: bench_matrix_perm.rs  lib.rs
triangle_count/: .gitignore  Cargo.toml  README.md  aboutme.txt  benchmark_config.json
triangle_count/graph/: Cargo.toml
triangle_count/graph/src/: lib.rs
triangle_count/registered_am-stable/: Cargo.toml
triangle_count/registered_am-stable/src/: tc_lamellar.rs  tc_lamellar_buffered.rs  tc_lamellar_get.rs
triangle_count/remote_closure-nightly/: Cargo.toml
triangle_count/remote_closure-nightly/src/: tc_lamellar.rs  tc_lamellar_buffered.rs  tc_lamellar_remote_closure_get.rs
triangle_count/src/: graph.rs  lib.rs  main.rs  mapgraph.rs  options.rs  printer.rs  tc_lamellar.rs  tc_lamellar_buffered.rs  tc_lamellar_get.rs  triangle_count.rs  triangle_count_buffered.rs  triangle_count_tgf.rs  triangle_count_typed_am_group.rs
triangle_count/src/active_message/: am_group.rs  buffered.rs  mod.rs  single.rs
triangle_count/src/graph/: mapgraph.rs  mod.rs
util/: Cargo.toml
util/src/: lib.rs
utils/: add_result.py  jsonl_filter.py
(+1 files in other folders)
