[package]
name = "histo"
version = "0.4.1"
authors = ["Ryan D. Friese"]
edition = "2021"

[dependencies]
#lamellar = { git = "https://github.com/pnnl/lamellar-runtime"} #, features = ["enable-rofi"] }
lamellar = { path = "../../lamellar-runtime-junction", features = ["enable-rofi","tokio-executor"] }
#lamellar = { path = "../../lamellar-runtime-junction", features = ["enable-rofi"] }
#lamellar = { version = "0.6.1" , features = ["enable-rofi"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3.0"
rand = "0.6"
parking_lot = { version = "0.12" }
tracing = "0.1"
tracing-futures = "0.2"
tracing-flame = "0.2"
tracing-subscriber = "0.3"
futures = "0.3"
clap = { version = "4.3.4", features = ["derive", "env"] }
async-std = "1.12.0"
dhat = "0.3.3"
tikv-jemallocator = "0.5"
