[package]
name = "histo"
version = "0.7.0"
authors = ["Ryan D. Friese", "Joseph A. Cottam"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3.0"
rand = "0.6"
lamellar = "0.7.1"
parking_lot = { version = "0.12" }
tracing = "0.1"
tracing-futures = "0.2"
tracing-flame = "0.2"
tracing-subscriber = "0.3"
json = "0.12.4"

[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true 


[[bin]]
name="histo_unsafe_am"
path="src/histo_unsafe_am.rs"

[[bin]]
name="histo_safe_am"
path="src/histo_safe_am.rs"

[[bin]]
name="histo_darc"
path="src/histo_darc.rs"

[[bin]]
name="histo_buffered_safe_am"
path="src/histo_buffered_safe_am.rs"

[[bin]]
name="histo_buffered_unsafe_am"
path="src/histo_buffered_unsafe_am.rs"

[[bin]]
name="histo_lamellar_atomicarray"
path="src/histo_lamellar_atomicarray.rs"

[[bin]]
name="histo_lamellar_array_comparison"
path="src/histo_lamellar_array_comparison.rs"
