[package]
name = "index_gather"
version = "0.7.0"
authors = ["Ryan D. Friese", "Joseph A. Cottam"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3.0"
rand = "0.6"
lamellar = { version = "0.7.1"} #add features = ["enable-rofi"] to use rofi lamellae
parking_lot = { version = "0.12" }
json = "0.12.4"

[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true 


[[bin]]
name="index_gather_atomic_array"
path="src/index_gather_atomic_array.rs"

[[bin]]
name="index_gather_read_only_array"
path="src/index_gather_read_only_array.rs"

[[bin]]
name="index_gather_buffered_am"
path="src/index_gather_buffered_am.rs"
