[package]
name = "celerity"
version = "0.1.0"
edition = "2024"

[dependencies]
lamellar = "0.7.1"
rand = "0.8"
#hdbscan = "=0.11.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }


[[bench]]
name = "iai_lamellar_benchmark"
harness = false

[[bench]]
name = "criterion_lamellar_benchmark"
harness = false
