[package]
name = "randperm"
version = "0.7.0"
authors = ["Ryan D. Friese", "Joseph A. Cottam"]
edition = "2021"

[dependencies]
rand = "0.6"
lamellar = { version = "0.7.1", features = ["enable-rofi"] }

[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true 


[[bin]]
name="randperm"
path="src/randperm.rs"
