[package]
name = "sparse_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structures = { path = "data_structures" }
rand="0.7"
sparsemat  = { git = "https://github.com/jdevinney/bale.git",     branch = "master" }
tabled = "0.10.0"