[package]
name = "sparse_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structures = { path = "data_structures" }
lamellar = { git = "https://github.com/pnnl/lamellar-runtime",  branch = "dev", features = ["enable-rofi"]    }   # add features = ["enable-rofi"] to use rofi lamellae
rand="0.7"
sparsemat  = { git = "https://github.com/jdevinney/bale.git",     branch = "master" }
tabled = "0.10.0"