[package]
name = "sparse_matrix_am"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
futures = "0.3.28"
itertools = "0.12.1"
# lamellar = { git = "https://github.com/pnnl/lamellar-runtime",  branch = "dev", features = ["enable-rofi"]    }   # add features = ["enable-rofi"] to use rofi lamellae
lamellar = { version = "0.6.1",  features = ["enable-rofi"]    } 
ordered-float = { version = "4.2.0", features = ["serde"] }
petgraph="0.6.4"
rand="0.6"
sprs = "0.11.1"
tabled = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathfinding = "4.9.1"
prettytable-rs = "0.10"