[package]
name = "sparse_matrix_am"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
futures = "0.3.28"
lamellar =    {   git = "https://github.com/pnnl/lamellar-runtime",  rev = "b0489af", features = ["enable-rofi"]    }   
ordered-float = "3.9.1"
rand="0.6"
sprs = "0.11.1"
tabled = "0.10.0"
petgraph = "0.6.4"
