[package]
name = "triangle_count"
version = "0.4.1"
authors = ["frie869 <ryan.friese@pnnl.gov>"]
edition = "2021"

[dependencies]

#lamellar = { git = "https://github.com/pnnl/lamellar-runtime", features = ["enable-rofi"] } 
#lamellar = { path = "../../lamellar-runtime-junction", features = ["enable-rofi","tokio-executor"] }
lamellar = { path = "../../lamellar-runtime-junction", features = ["enable-rofi"] }
#lamellar = { version = "0.6.0" , features = ["enable-rofi"] }
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
async-std = "1.6.4"
bincode = "1.3"
futures = "0.3"
clap = { version = "4.3.4", features = ["derive", "env"] }

