[package]
name = "lamellar_graph"
version = "0.5.0"
authors = ["frie869 <ryan.friese@pnnl.gov>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1"
lamellar = { version = "0.7.1" } #add features = ["enable-rofi"] to use rofi lamellae
bincode = "1.3"


[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true 


[lib]
name="lamellar_graph"
path="src/lib.rs"

[[bin]]
name="triangle_count"
path="src/triangle_count.rs"

[[bin]]
name="triangle_count_buffered"
path="src/triangle_count_buffered.rs"
