[package]
name = "lamellar_graph"
version = "0.7.0"
authors = ["frie869 <ryan.friese@pnnl.gov>", "Joseph A. Cottam"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1"
lamellar = { version = "0.7.1" } #add features = ["enable-rofi"] to use rofi lamellae
bincode = "1.3"
json = "0.12.4"
benchmark_record = {path = "../benchmark_record"} 


[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true 


[lib]
name="lamellar_graph"
path="src/lib.rs"

[[bin]]
name="triangle_count"
path="src/triangle_count.rs"

[[bin]]
name="triangle_count_buffered"
path="src/triangle_count_buffered.rs"
