[package]
name = "histo"
version = "0.2.0"
authors = ["frie869"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.3.0"
rand = "0.6"
lamellar = { path = "../../../lamellar-runtime", features = ["nightly"] }

[profile.release]
opt-level=3
lto=true
codegen-units=1
debug = true 


[[bin]]
name="histo_dma"
path="src/histo_dma.rs"

[[bin]]
name="histo_buffered_dma"
path="src/histo_buffered_updates_dma.rs"

[[bin]]
name="histo_static"
path="src/histo_static.rs"

[[bin]]
name="histo_buffered_static"
path="src/histo_buffered_updates_static.rs"