[package]
name = "lamellar_sparse_matrix"
version = "0.1.0"
authors = ["Gregory Roek, Erdal Mutlu, Ryan Friese, and the Lamellar Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7"
regex="1"
lamellar = { git = "https://github.com/pnnl/lamellar-runtime",  branch = "dev"    }   # add features = ["enable-rofi"] to use rofi lamellae
sparsemat  = { git = "https://github.com/jdevinney/bale.git",     branch = "master" }

[[bin]]
name="test"
path="src/test.rs"