[package]
name = "data_structures"
version = "0.1.0"
authors = ["Gregory Roek, Erdal Mutlu, Ryan Friese, and the Lamellar Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
rand = "0.7"  # rand= { version = "0.7", features = ["std_rng"] }
rand_chacha = "0.3.1"
regex="1"
lamellar = { git = "https://github.com/pnnl/lamellar-runtime",  branch = "master", features = ["enable-rofi"]    }   # add features = ["enable-rofi"] to use rofi lamellae
sparsemat  = { git = "https://github.com/jdevinney/bale.git",     branch = "master" }
tabled = "0.10.0"

[[bin]]
name="test"
path="src/test.rs"